--- a/format.css
+++ b/format.css
@@ -1,7 +1,6 @@
 body{
-	background-image: url("Floorplan.png");
+	background-image: url("Floorplann.jpg");
 	background-repeat: no-repeat;
-	background-color: #cccccc;
 	background-size: 100vw 100vh;
 }
 
