--- a/format.css
+++ b/format.css
@@ -23,17 +23,17 @@ body{
 	
 }
 
-#A {
+#Beacon1 {
 	left: 61%;
 	top: 20%;
 }
 
-#B {
+#Beacon2 {
 	left: 61%;
 	top: 55%;
 }
 
-#C {
+#Beacon3 {
 	left:20%;
 	top:72%;
 }
